# root

./: CMakeLists.txt  RootSettingsPip.cmake  setup.py  test_pip_root.sh
.github/workflows/: root-ci.yml
README/ReleaseNotes/v626/: index.md
README/ReleaseNotes/v632/: index.md
README/ReleaseNotes/v634/: index.md
README/ReleaseNotes/v636/: index.md
README/ReleaseNotes/v640/: index.md
bindings/jupyroot/: CMakeLists.txt
bindings/pyroot/cppyy/: sync-upstream
bindings/pyroot/cppyy/cppyy/test/: CMakeLists.txt  support.py  templates.h  test_aclassloader.py  test_advancedcpp.py  test_conversions.py  test_cpp11features.py  test_crossinheritance.py  test_datatypes.py  test_doc_features.py  test_fragile.py  test_leakcheck.py  test_lowlevel.py  test_operators.py  test_overloads.py  test_pythonify.py  test_pythonization.py  test_stltypes.py  test_streams.py  test_templates.py
bindings/pyroot/pythonizations/: CMakeLists.txt
bindings/tpython/: CMakeLists.txt
bindings/tpython/inc/: TPython.h
bindings/tpython/src/: TPyReturn.cxx  TPython.cxx
cmake/modules/: CheckCompiler.cmake  RootBuildOptions.cmake  RootConfiguration.cmake  RootMacros.cmake  SearchInstalledSoftware.cmake  SearchRootCoreDeps.cmake
config/: RConfigure.in  root-config.in  rootrc.in  thisroot.sh
core/base/: CMakeLists.txt
core/base/inc/: TMathBase.h
core/base/src/: TApplication.cxx  TROOT.cxx  TSystem.cxx
core/base/test/: CMakeLists.txt  TMathBaseTests.cxx
core/clingutils/: CMakeLists.txt
core/unix/src/: TUnixSystem.cxx
graf3d/gl/inc/: TGLWSIncludes.h
graf3d/gl/src/: TGLContext.cxx  TGLFBO.cxx  TGLSAViewer.cxx  TX11GL.cxx
graf3d/rglew/: CMakeLists.txt
graf3d/rglew/inc/: TGLIncludes.h
graf3d/rglew/inc/glad/: gl.h  glx.h
graf3d/rglew/src/: gl.c  glx.c
gui/gui/src/: TRootBrowser.cxx
gui/qt5webdisplay/: CMakeLists.txt
gui/qt6webdisplay/: CMakeLists.txt
hist/hist/inc/: TF1.h  TF2.h  TF3.h  TH1.h  TH2.h  TH2Poly.h
hist/hist/src/: TBinomialEfficiencyFitter.cxx  TF1.cxx  TFractionFitter.cxx  TH1.cxx  TH2.cxx  TH2Poly.cxx
hist/hist/test/: CMakeLists.txt  testTH2Poly.cxx
io/io/: CMakeLists.txt
io/io/inc/: TFileCacheRead.h
io/io/src/: TFileCacheRead.cxx
math/: CMakeLists.txt
math/fftw/src/: TFFTComplex.cxx  TFFTComplexReal.cxx  TFFTReal.cxx  TFFTRealComplex.cxx
math/foam/inc/: LinkDef.h  TFoam.h  TFoamCell.h
math/foam/src/: TFoam.cxx  TFoamMaxwt.cxx  TFoamVect.cxx
math/fumili/src/: TFumili.cxx
math/mathcore/src/: BrentMinimizer1D.cxx  BrentRootFinder.cxx  Delaunay2D.cxx  DistSamplerOptions.cxx  FitResult.cxx  Fitter.cxx  GaussIntegrator.cxx  GaussLegendreIntegrator.cxx  RichardsonDerivator.cxx  TRandom1.cxx
math/mathmore/src/: ChebyshevApprox.cxx  Derivator.cxx  GSLIntegrator.cxx  GSLMCIntegrator.cxx  GSLMinimizer.cxx  GSLNLSMinimizer.cxx  GSLRootFinder.cxx  GSLRootFinderDeriv.cxx  Interpolator.cxx
math/mathmore/test/: StatFunction.cxx  testMultiRootFinder.cxx
math/matrix/src/: TDecompBK.cxx  TDecompBase.cxx  TDecompLU.cxx  TDecompSparse.cxx
math/minuit/src/: TFitter.cxx  TLinearFitter.cxx  TMinuit.cxx
math/minuit2/: CMakeLists.txt  StandAlone.cmake
math/minuit2/examples/: exampleMyMinuit2.C
math/minuit2/inc/: LinkDef.h  MyMinuit2  TMinuit2TraceObject.h
math/minuit2/src/: AnalyticalGradientCalculator.cxx  BFGSErrorUpdator.cxx  BasicMinimumError.cxx  CMakeLists.txt  CombinedMinimumBuilder.cxx  DavidonErrorUpdator.cxx  ExternalInternalGradientCalculator.cxx  FumiliBuilder.cxx  FumiliErrorUpdator.cxx  FumiliGradientCalculator.cxx  FumiliMinimizer.cxx  FumiliStandardChi2FCN.cxx  FumiliStandardMaximumLikelihoodFCN.cxx  HessianGradientCalculator.cxx  InitialGradientCalculator.cxx  LaEigenValues.cxx  LaInnerProduct.cxx  LaInverse.cxx  LaOuterProduct.cxx  LaSumOfElements.cxx  LaVtMVSimilarity.cxx  MPIProcess.cxx  MinimumBuilder.cxx  Minuit2Minimizer.cxx  MnApplication.cxx  MnContours.cxx  MnCovarianceSqueeze.cxx  MnEigen.cxx  MnFcn.cxx  MnFumiliMinimize.cxx  MnFunctionCross.cxx  MnGlobalCorrelationCoeff.cxx  MnHesse.cxx  MnLineSearch.cxx  MnMachinePrecision.cxx  MnMinos.cxx  MnParabolaFactory.cxx  MnParameterScan.cxx  MnPlot.cxx  MnPosDef.cxx  (+38 more)
math/mlp/src/: TNeuron.cxx  TSynapse.cxx
math/myvecops/: CMakeLists.txt
math/myvecops/inc/: LinkDef.h
math/myvecops/src/: RVec.cxx
math/physics/src/: TFeldmanCousins.cxx  TGenPhaseSpace.cxx  TVector2.cxx
math/quadp/src/: TGondzioSolver.cxx  TMehrotraSolver.cxx  TQpDataBase.cxx  TQpLinSolverBase.cxx  TQpProbBase.cxx  TQpResidual.cxx  TQpSolverBase.cxx  TQpVar.cxx
math/splot/src/: TSPlot.cxx
math/unuran/src/: TUnuranSampler.cxx
roofit/: CMakeLists.txt
roofit/batchcompute/: CMakeLists.txt
roofit/batchcompute/inc/: Batches.cuh  Batches.h  RooBatchCompute.h  RooSpan.h  (+1 more)
roofit/histfactory/: CMakeLists.txt
roofit/hs3/: CMakeLists.txt
roofit/roofit/: CMakeLists.txt
roofit/roofitcore/: CMakeLists.txt
roofit/roofitmath/: CMakeLists.txt
roofit/roostats/: CMakeLists.txt
roottest/main/: CMakeLists.txt
test/: CMakeLists.txt  stressHistFactory_tests.cxx  stressMathMore.cxx  stressRooFit.cxx  stressRooFit_ref.root  stressRooFit_tests.h  stressRooStats.cxx
test/RootIDE/: TGRootIDE.cxx
tmva/tmva/: CMakeLists.txt
tree/: CMakeLists.txt
tree/fastforest/: CMakeLists.txt  LinkDef.h
tutorials/: CMakeLists.txt
tutorials/cocoa/: customcolor.h
tutorials/eve/: geom_alias.C  geom_atlas.C  geom_cms.C  geom_cms_stereo.C  geom_lhcb.C
tutorials/fit/: FittingDemo.C
tutorials/geom/: tessellatedNav.C
tutorials/graphics/: archi.C
tutorials/gui/: Slider3Demo.C  buttonTest.C  calendar.C  guiWithCLING.C  guitest.C
tutorials/matrix/: decomposeQR.C
tutorials/multicore/: mp_H1_lambdas.C
tutorials/roofit/: rf109_chi2residpull.C  rf401_importttreethx.C  rf401_importttreethx.py  rf509_wsinteractive.C  rf509_wsinteractive.py  rf515_hfJSON.py  rf704_amplitudefit.C  rf704_amplitudefit.py  rf707_kernelestimation.C
tutorials/roostats/: rs101_limitexample.C  rs101_limitexample.py  rs301_splot.py
tutorials/tmva/: tmva103_Application.C
tutorials/unfold/: testUnfold5c.C
tutorials/xml/: xmlmodifyfile.C
(+829 files in other folders)
